# solana-sdk

./: .eslintignore  .eslintrc.json  .gitignore  .gitmodules  404.html  Anchor.toml  Cargo.toml  Oracle_Version.md  Publishing.md  README.md  SECURITY.md  anchor-test.sh  api.html  architecture.html  autodoc.config.json  buffer-relayer.html  dao.html  developers.html  feed.html  idl.html  index.html  introduction.html  job-directory.html  lerna.json  old.Cargo.toml  opensearch.xml  oracle.html  package-lock.json  package-lock.json.bkup  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  private-queues.html  program.html  publisher.html  queue.html  randomness.html  sbv2.mainnet.json  search.html  security.html  (+5 more)
example-programs/anchor-feed-parser/programs/anchor-feed-parser/: Cargo.toml
examples/03_basic_function/: Anchor.toml  Cargo.toml  README.md  package.json
examples/03_basic_function/src/: lib.rs
examples/feeds/01_feed_client/: .gitignore  Anchor.toml  Cargo.toml  package.json  tsconfig.json
examples/feeds/01_feed_client/src/: lib.rs
examples/feeds/01_feed_client/tests/: switchboard-feed-client.test.ts
examples/feeds/02_spl_native/: Cargo.toml  package.json  tsconfig.json
examples/feeds/02_spl_native/src/: lib.rs
examples/functions/01_basic_oracle/: .dockerignore  Anchor.toml  Cargo.toml  README.md  binance.tickers.sh  package.json  tsconfig.json
examples/functions/01_basic_oracle/scripts/: devnet.ts  fnCreate.ts
examples/functions/01_basic_oracle/sgx-function/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  package.json
examples/functions/01_basic_oracle/src/: decimal.rs  error.rs  lib.rs  model.rs  utils.rs
examples/functions/01_basic_oracle/switchboard-function/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  package.json
examples/functions/01_basic_oracle/tests/: basic_oracle.ts
examples/functions/03_candles_oracle/switchboard-function/: Cargo.toml  Dockerfile  Dockerfile.dev  package.json
examples/functions/04_randomness_callback/: Anchor.toml  Cargo.toml  package.json  request.ts  tsconfig.json
examples/functions/04_randomness_callback/sgx-function/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md
examples/functions/04_randomness_callback/src/: error.rs  lib.rs  state.rs  utils.rs
examples/functions/04_randomness_callback/switchboard-function/: Cargo.toml  Dockerfile  Dockerfile.dev  package.json
examples/functions/04_randomness_callback/tests/: custom_randomness_request.ts
examples/functions/05_raffle_program/: .gitignore  Anchor.toml  Cargo.toml  package.json  tsconfig.json
examples/functions/05_raffle_program/sgx-function/: Cargo.toml  Makefile
examples/functions/05_raffle_program/src/: error.rs  lib.rs
examples/functions/05_raffle_program/switchboard-function/: .dockerignore  Cargo.toml  Dockerfile  README.md
examples/functions/05_raffle_program/tests/: raffle-program.ts  utils.ts
examples/vrf/01_vrf_client/: Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
examples/vrf/01_vrf_client/src/: lib.rs
examples/vrf/01_vrf_client/tests/: anchor-vrf-lite-parser.test.ts
libraries/rs/: Cargo.toml  README.md
libraries/rs/src/: aggregator.rs  buffer_relayer.rs  decimal.rs  error.rs  history_buffer.rs  lib.rs  permission.rs  queue.rs  vrf.rs
programs/anchor-buffer-parser/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
programs/anchor-buffer-parser/client/: programId.ts
programs/anchor-buffer-parser/client/accounts/: BufferClient.ts  index.ts
programs/anchor-buffer-parser/client/types/: ReadResultParams.ts  index.ts
programs/anchor-buffer-parser/src/: lib.rs
programs/anchor-buffer-parser/tests/: anchor-buffer-parser.test.ts
programs/anchor-feed-parser/: Anchor.toml  Cargo.lock.old  Cargo.toml  README.md  package-lock.json  package.json  solita.ts  tsconfig.json
programs/anchor-feed-parser/client/: programId.ts
programs/anchor-feed-parser/client/accounts/: FeedClient.ts  index.ts
programs/anchor-feed-parser/client/errors/: custom.ts
programs/anchor-feed-parser/client/instructions/: index.ts  readResult.ts
programs/anchor-feed-parser/programs/anchor-feed-parser/: Cargo.toml
programs/anchor-feed-parser/scripts/: generate.ts
programs/anchor-feed-parser/src/: lib.rs
programs/anchor-feed-parser/tests/: anchor-feed-parser.test.ts  anchor-feed-parser.ts  devnet.test.ts  localnet.test.ts
programs/anchor-history-parser/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
programs/anchor-history-parser/src/: lib.rs
programs/anchor-history-parser/tests/: anchor-history-parser.test.ts
programs/anchor-vrf-parser/: Anchor.toml  Cargo.toml  README.md  cli.ts  docker-compose.local.yml  package-lock.json  package.json  solita.ts  tsconfig.json
programs/anchor-vrf-parser/.switchboard/networks/: default.config.json  minimal.config.json
programs/anchor-vrf-parser/client/: programId.ts
programs/anchor-vrf-parser/src/: index.ts  lib.rs
programs/anchor-vrf-parser/tests/: anchor-vrf-parser.test.ts  init.ts  permissionless-queue.test.ts  test-utils.ts  vrc-cpi.test.ts
programs/native-feed-parser/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
programs/native-feed-parser/src/: lib.rs
programs/native-feed-parser/tests/: spl-feed-parser.test.ts
rust/switchboard-solana/: Cargo.anchor27.toml  Cargo.anchor28.toml  Cargo.toml  README.md  package.json  publish.sh  set-anchor.sh
rust/switchboard-solana/src/: accounts.rs  clock.rs  decimal.rs  error.rs  events.rs  instructions.rs  lib.rs  macros.rs  prelude.rs  program_id.rs  secrets.rs  seeds.rs  types.rs  utils.rs
rust/switchboard-solana/src/client/: mod.rs  (+6 more)
rust/switchboard-v2/: Cargo.toml  README.md  README.template.md  package.json
rust/switchboard-v2/snippets/: meta.json  meta.yaml
rust/switchboard-v2/src/: aggregator.rs  buffer_relayer.rs  crank.rs  ecvrf.rs  error.rs  history_buffer.rs  lease.rs  lib.rs  oracle.rs  permission.rs  queue.rs  sb_state.rs  vrf.rs  vrf_lite.rs  vrf_pool.rs
(+4346 files in other folders)
