[package]
name = "anchor-buffer-parser"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_buffer_parser"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
switchboard-v2 = { path = "../../rust/switchboard-v2", features = ["devnet"] }
# switchboard-v2 = { version = "^0.1.14", features = ["devnet"] }
anchor-lang = "^0.25.0"
solana-program = "~1.10.29"