[package]
name = "anchor-feed-parser"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_feed_parser"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
switchboard-v2 = { path = "../../libraries/rs" }
# switchboard-v2 = "^0.1.10"
anchor-lang = "^0.24.2"
solana-program = "~1.9.13"