[package]
name = "anchor-feed-parser"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_feed_parser"

[features]
default = ["devnet"]
devnet = ["switchboard-v2/devnet"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
switchboard-v2 = { path = "../../rust/switchboard-v2" }
# switchboard-v2 = { version = "0.1.20" }
anchor-lang = "^0.27.0"
solana-program = "~1.14.0"
bytemuck = "1.7.2"