[package]
name = "anchor-vrf-parser"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_vrf_parser"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
switchboard-solana = { path = "../../rust/switchboard-solana" }
# switchboard-solana = { version = "^0.1" }
anchor-lang = "=0.26.0"
anchor-spl = "=0.26.0"
solana-program = "1.14.18"
bytemuck = "1.13.1"
winnow = "=0.4.1"
toml_edit = "=0.19.8"
toml_datetime = "=0.6.1"
