[package]
name = "native-feed-parser"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "native_feed_parser"

[features]
no-entrypoint = []

[dependencies]
# switchboard-v2 = { path = "../../rust/switchboard-v2", features = ["devnet"] }
switchboard-v2 = { version = "^0.1.17", features = ["devnet"] }
solana-program = "~1.14.0"
anchor-lang = "^0.26.0"
