[package]
name = "native-feed-parser"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "native_feed_parser"

[features]
no-entrypoint = []

[dependencies]
switchboard-v2 = { path = "../../rust/switchboard-v2" }
# switchboard-v2 = "^0.1.20" 
solana-program = "~1.14.0"
anchor-lang = "^0.27.0"
