[package]
name = "switchboard-solana"
version = "0.28.21"
edition = "2021"
description = "A Rust library to interact with Switchboard accounts."
readme = "README.md"
keywords = ["switchboard", "oracle", "solana"]
homepage = "https://switchboard.xyz"
repository = "https://github.com/switchboard-xyz/solana-sdk/tree/main/rust/switchboard-solana"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "switchboard_solana"
doctest = false

[features]
default = ["cpi"]
no-entrypoint = []
cpi = ["no-entrypoint"]
secrets = ["rand", "rsa", "reqwest", "serde", "serde_json"]

[dependencies]
anchor-spl = "0.28.0"
solana-program = ">= 1.16, < 1.17"
solana-address-lookup-table-program = ">= 1.16, < 1.17"
rust_decimal = "^1"
bytemuck = "^1"
superslice = "1"

[target.'cfg(target_os = "solana")'.dependencies]
switchboard-common = { version = "0.8.20" }
anchor-lang = { version = "0.28.0" }

[target.'cfg(not(target_os = "solana"))'.dependencies]
switchboard-common = { version = "0.8.20", features = [
  "client",
  "solana",
] }
anchor-client = { version = "0.28.0" }
solana-client = ">= 1.16, < 1.17"
bincode = { version = "^1" }
sgx-quote = { version = "0.1.0" }
cron = { version = "0.12.0" }
chrono = { version = "0.4.25" }
hex = "0.4.3"
tokio = "1"
url = "2.4"

# Secrets Dependencies
rsa = { version = "0.5.0", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
rand = { version = "0.8.5", optional = true }
serde = { version = "^1", features = ["derive"], optional = true }
serde_json = { version = "^1", optional = true }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_cfg"]
