[package]
name = "switchboard-solana"
documentation = "https://switchboard-solana-rust-docs.web.app"
version = "0.30.4"
edition = "2021"
resolver = "2"
description = "A Rust library to interact with Switchboard accounts."
readme = "README.md"
keywords = ["switchboard", "oracle", "solana"]
homepage = "https://switchboard.xyz"
repository = "https://github.com/switchboard-xyz/solana-sdk/tree/main/rust/switchboard-solana"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "switchboard_solana"
doctest = false

[features]
default = ["cpi"]
no-entrypoint = []
cpi = ["no-entrypoint"]
pid_override = []

[dependencies]
solana-program = "1.17.13,<2"
anchor-lang = "0.30.1"
bytemuck = "1.16.1"
rust_decimal = "1.32.0"
superslice = "1.0.0"
lazy_static = "1.5.0"
