[package]
name = "switchboard-v2"
version = "0.1.16"
edition = "2021"
description = "A Rust library to interact with Switchboard V2 accounts."
readme = "README.md"
keywords = ["switchboard", "oracle", "solana"]
homepage = "https://docs.switchboard.xyz"
repository = "https://github.com/switchboard-xyz/switchboard-v2/tree/main/libraries/rs"
license = "MIT"
documentation = "https://docs.rs/switchboard-v2/"

[lib]
crate-type = ["cdylib", "lib"]
name = "switchboard_v2"
doctest = false

[features]
default = ["cpi"]
no-entrypoint = []
cpi = ["no-entrypoint"]
devnet = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
rust_decimal = { version = "1.18.0" }
solana-program = "~1.10.29"
bytemuck = "1.7.2"
superslice = "1"
spl-token = "3.3.1"
