[package]
name = "switchboard-v2"
version = "0.4.0"
edition = "2021"
description = "A Rust library to interact with Switchboard V2 accounts."
readme = "README.md"
keywords = ["switchboard", "oracle", "solana"]
homepage = "https://docs.switchboard.xyz"
repository = "https://github.com/switchboard-xyz/sbv2-solana/tree/main/rust/switchboard-v2"
license = "MIT"
documentation = "https://docs.rs/switchboard-v2/"

[lib]
crate-type = ["cdylib", "lib"]
name = "switchboard_v2"
doctest = false

[features]
default = ["cpi"]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
rust_decimal = "=1.26.1"
bytemuck = "1.13.1"
superslice = "1"
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "=1.14.18"
