[workspace]

[package]
name = "native-feed-parser"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "native_feed_parser"

[features]
no-entrypoint = []

[dependencies]
# switchboard-solana = "0.28.4"
switchboard-solana = { version = "0.28.4", path = "../../../rust/switchboard-solana" }
