[package]
name = "basic_oracle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "basic_oracle"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# anchor-lang = "0.28.0"
switchboard-solana = "0.6.1"
# switchboard-solana = { version = "0.6", path = "../../../rust/switchboard-solana" }
bytemuck = "^1"
