[workspace]
members = ["."]

[package]
name = "raffle-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[lib]
crate-type = ["cdylib", "lib"]
name = "raffle_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
switchboard-solana = "0.28.19"
# switchboard-solana = { version = "0.28.19", path = "../../../rust/switchboard-solana" }
