[package]
name = "anchor-vrf-lite-parser"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_vrf_lite_parser"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
bytemuck = "1.13.1"
switchboard-solana = { path = "../../../rust/switchboard-solana", version = "0.8.3" }
# switchboard-solana = { version = "^0.8.3", path = "../../../rust/switchboard-solana" }
