[package]
name = "basic-oracle-function"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic-oracle-function"
path = "src/main.rs"

[dependencies]
basic_oracle = { path = "../", features = ["no-entrypoint"] }
tokio = "^1"
futures = "0.3"
serde = "^1"
serde_json = "^1"
# switchboard-utils = "0.5.0"
# switchboard-solana = "0.5.3"
switchboard-solana = { path = "../../../../rust/switchboard-solana" }
