[package]
name = "basic-oracle-function"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic-oracle-function"
path = "src/main.rs"

[dependencies]
basic_oracle = { path = "../", features = ["no-entrypoint"] }
tokio = "^1"
futures = "0.3"
serde = "^1"
serde_json = "^1"
switchboard-utils = "0.6"
# switchboard-utils = { version = "0.6", path = "../../../../../sbv2-core/rust/switchboard-utils" }
switchboard-solana = "=0.6.7"
# switchboard-solana = { version = "0.6", path = "../../../../rust/switchboard-solana" }
