[workspace]

[package]
name = "basic-oracle-function"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic-oracle-function"
path = "src/main.rs"

[dependencies]
basic_oracle = { path = "../", features = ["no-entrypoint"] }
tokio = "^1"
futures = "0.3"
serde = "^1"
serde_json = "^1"
switchboard-utils = { version = "0.8" }
switchboard-solana = "0.28.19"
# switchboard-solana = { version = "0.28.19", path = "../../../../rust/switchboard-solana" }
bytemuck = "1.13.1"
rust_decimal = "1.30.0"
