[workspace]

[package]
name = "randomness-function"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "randomness-function"
path = "src/main.rs"

[dependencies]
tokio = "^1"
futures = "0.3"
# switchboard-solana = "0.28.19"
switchboard-solana = { version = "0.28.19", path = "../../../../rust/switchboard-solana" }
