[workspace]

[package]
name = "randomness-function"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "randomness-function"
path = "src/main.rs"

[dependencies]
tokio = "^1"
futures = "0.3"
# switchboard-solana = "0.28.43"
switchboard-solana = { path = "../../../../rust/switchboard-solana", features = [
    "macros",
] }
