[workspace]

[package]
name = "solana-raffle-program"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "^1"
futures = "0.3"
# switchboard-solana = "0.28.19"
switchboard-solana = { version = "0.28.19", path = "../../../../rust/switchboard-solana" }
switchboard-utils = { version = "0.8", path = "../../../../../../rust/switchboard-utils" }
