[workspace]

[package]
name = "solana-raffle-program"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "^1"
futures = "0.3"
# switchboard-solana = "0.28.43"
switchboard-solana = { path = "../../../../rust/switchboard-solana", features = [
    "macros",
] }
switchboard-utils = { path = "../../../../../../rust/switchboard-utils" }
