[package]
name = "anchor-feed-parser"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_feed_parser"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "^0.24.2"
switchboard-v2 = "^0.1.10"
solana-program = "~1.9.13"